--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -22,6 +22,14 @@
     "lodash-es": ">=4.17.21",
     "ua-parser-js": "^1.0.39"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/baotlake/ziziyi"
+  },
+  "author": {
+    "name": "HuanYang",
+    "email": "33485493+baotlake@users.noreply.github.com",
+    "url": "https://github.com/baotlake"
+  },
   "license": "ISC"
 }
