--- a/packages/ext/package.json
+++ b/packages/ext/package.json
@@ -31,7 +31,15 @@
     "extension",
     "devtools"
   ],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/baotlake/ziziyi"
+  },
+  "author": {
+    "name": "HuanYang",
+    "email": "33485493+baotlake@users.noreply.github.com",
+    "url": "https://github.com/baotlake"
+  },
   "license": "MIT",
   "peerDependencies": {
     "@vueuse/core": "^11.0.3",
