--- a/packages/invoker/package.json
+++ b/packages/invoker/package.json
@@ -19,6 +19,14 @@
     "message",
     "invoke"
   ],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/baotlake/ziziyi"
+  },
+  "author": {
+    "name": "HuanYang",
+    "email": "33485493+baotlake@users.noreply.github.com",
+    "url": "https://github.com/baotlake"
+  },
   "license": "MIT"
 }
