--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
+      - run: npm ci
       - run: | 
           cd packages/invoker
-          npm ci
           npm run build
           pm publish --provenance --access public
         env:
@@ -38,9 +38,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
+      - run: npm ci
       - run: | 
           cd packages/ext
-          npm ci
           npm run build
           pm publish --provenance --access public
         env:
@@ -57,9 +57,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
+      - run: npm ci
       - run: | 
           cd packages/dom
-          npm ci
           npm run build
           pm publish --provenance --access public
         env:
@@ -76,9 +76,9 @@ jobs:
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
+      - run: npm ci
       - run: | 
           cd packages/analytics
-          npm ci
           npm run build
           pm publish --provenance --access public
         env:
