--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ziziyi/invoker",
-  "version": "1.0.4",
+  "name": "@ziziyi/utils",
+  "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,10 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "invoker",
-    "RPC",
-    "message",
-    "invoke"
+    "utils",
+    "helper"
   ],
   "repository": {
     "type": "git",
