--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ziziyi/analytics",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -19,8 +19,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "lodash-es": ">=4.17.21",
-    "ua-parser-js": "^1.0.39"
+    "lodash-es": ">=4.0.0",
+    "ua-parser-js": ">=1.0.0"
   },
   "repository": {
     "type": "git",
