--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ziziyi/dom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -33,7 +33,7 @@
   },
   "license": "ISC",
   "peerDependencies": {
-    "@vueuse/core": "^11.0.3",
-    "vue": "^3.5.6"
+    "@vueuse/core": ">=9.0.0",
+    "vue": ">=3.0.0"
   }
 }
