--- a/packages/toolchain/package.json
+++ b/packages/toolchain/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ziziyi/invoker",
-  "version": "1.0.5",
+  "name": "@ziziyi/toolchain",
+  "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -10,14 +10,12 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "build": "tsup src/index.ts src/svgr.ts --format cjs,esm --dts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "invoker",
-    "RPC",
-    "message",
-    "invoke"
+    "toolchain",
+    "cli"
   ],
   "repository": {
     "type": "git",
