--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "packageManager": "npm@10.5.0",
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@types/babel__template": "^7.4.4",
     "@types/chrome": "^0.0.270",
     "@types/lodash-es": "^4.17.12",
