--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd packages/analytics && npm run build && cd ../dom && npm run build && cd ../ext && npm run build && cd ../invoker && npm run build"
+    "build": "turbo build",
+    "release": "turbo build && changeset publish",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
