--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "turbo build",
-    "release": "turbo build && changeset publish",
+    "release": "npm run build && changeset publish",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
